--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </ul>
                     </div>
                     <div class="results-modal-right-section">
-                        <img id="results-modal-thumbnail" src="/files/noimage.png" alt="Movie Thumbnail" onerror="this.src='files/noimage.png'"/>
+                        <img id="results-modal-thumbnail" src='files/noimage.png' alt="Movie Thumbnail" onerror="this.src='files/noimage.png'"/>
                         <h2 id="results-modal-title"> <span> <em>No title</em> </span> </h2>
                         <p id="results-modal-release-date"> <strong>Release Date:</strong> <span> <em>No release date</em> </span> </p>
                     </div>
@@ -58,7 +58,7 @@
                         </ul>
                     </div>
                     <div class="show-modal-right-section">
-                        <img id="show-modal-thumbnail" src="/files/noimage.png" alt="Movie Thumbnail" onerror="this.src='files/noimage.png'"/>
+                        <img id="show-modal-thumbnail" src="files/noimage.png" alt="Movie Thumbnail" onerror="this.src='files/noimage.png'"/>
                         <h2 id="show-modal-title"> <span> <em>No title</em> </span> </h2>
                         <p id="show-modal-release-date"> <strong>Release Date:</strong> <span> <em>No release date</em> </span> </p>
                     </div>
