--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         <div class="swiper-pagination"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     
 </body>
 </html>
