--- a/index2.html
+++ b/index2.html
@@ -74,6 +74,20 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".swiper-js", {
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        scrollbar: {
+            el: '.swiper-scrollbar',
+        },
+        pagination: {
+            el: '.swiper-pagination',
+        },
+        });
+    </script>
 </body>
 
 </html>
