--- a/index2.html
+++ b/index2.html
@@ -48,17 +48,25 @@
     <br><br><br>
     <div class="dvSlider">
         <!-- Slider main container -->
-        <div class="swiper swiper-js">
+        <div class="swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
-                <div class="swiper-slide">Slide 6</div>
-                ...
+                <div class="swiper-slide">
+                    <img src="https://via.placeholder.com/1002" alt=""> 
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://via.placeholder.com/1002" alt=""> 
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://via.placeholder.com/1002" alt=""> 
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://via.placeholder.com/1002" alt=""> 
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://via.placeholder.com/1002" alt=""> 
+                </div>
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
@@ -72,21 +80,30 @@
         </div>
     </div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
-        var swiper = new Swiper(".swiper-js", {
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
-        scrollbar: {
-            el: '.swiper-scrollbar',
-        },
-        pagination: {
-            el: '.swiper-pagination',
-        },
+         const swiper = new Swiper('.swiper', {
+            // Optional parameters
+           
+            // If we need pagination
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            // Navigation arrows
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+
+            // And if we need scrollbar
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
         });
+
+        
     </script>
 </body>
 
