--- a/index2.html
+++ b/index2.html
@@ -52,21 +52,13 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">
-                    <img src="https://via.placeholder.com/1002" alt=""> 
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://via.placeholder.com/1002" alt=""> 
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://via.placeholder.com/1002" alt=""> 
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://via.placeholder.com/1002" alt=""> 
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://via.placeholder.com/1002" alt=""> 
-                </div>
+                <div class="swiper-slide">Slide 1</div>
+                <div class="swiper-slide">Slide 2</div>
+                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">Slide 4</div>
+                <div class="swiper-slide">Slide 5</div>
+                <div class="swiper-slide">Slide 6</div>
+                ...
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
@@ -79,22 +71,27 @@
             <div class="swiper-scrollbar"></div>
         </div>
     </div>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
-         const swiper = new Swiper('.swiper', {
+        const swiper = new Swiper('.dvSlider .swiper', {
             // Optional parameters
-           
+            // direction: 'vertical',
+            // loop: true,
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+
             // If we need pagination
             pagination: {
-                el: '.swiper-pagination',
+                el: ".swiper-pagination",
+                clickable: true,
             },
 
             // Navigation arrows
             navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
             },
 
             // And if we need scrollbar
@@ -102,9 +99,8 @@
                 el: '.swiper-scrollbar',
             },
         });
-
-        
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
