--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#movies">Movies</a>
-        <a href="#profile">Profile</a>
+        <a href="#home" navigation-type="slide" animation-type="fade">Home</a>
+        <a href="#movies" navigation-type="slide" animation-type="fade">Movies</a>
+        <a href="#profile" navigation-type="slide" animation-type="zoom">Profile</a>
     </nav>
     <main>
         <div id="success-message" style="display: none; position: fixed; top: 10px; left: 50%; transform: translateX(-50%); padding: 10px 20px; background-color: rgba(255, 255, 255, 0.8); color: black; border-radius: 10px; font-size: 16px; font-weight: bold; text-align: center; z-index: 9999;">
